--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -11,6 +11,7 @@
    },
    "dependencies": {
       "@radix-ui/react-slot": "^1.2.3",
+      "@tailwindcss/typography": "^0.5.19",
       "@tailwindcss/vite": "^4.1.16",
       "axios": "^1.13.1",
       "class-variance-authority": "^0.7.1",
