--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -9,12 +9,16 @@
    },
    "devDependencies": {
       "@types/bun": "latest",
-      "@types/express": "^5.0.5"
+      "@types/express": "^5.0.5",
+      "dotenv-cli": "^11.0.0",
+      "prisma": "^6.19.0"
    },
    "peerDependencies": {
       "typescript": "^5"
    },
    "dependencies": {
+      "@prisma/client": "^6.19.0",
+      "dayjs": "^1.11.19",
       "dotenv": "^17.2.3",
       "express": "^5.1.0",
       "openai": "^6.7.0",
