finisched training, everything works

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -17,10 +17,12 @@
       "typescript": "^5"
    },
    "dependencies": {
+      "@huggingface/inference": "^4.13.2",
       "@prisma/client": "^6.19.0",
       "dayjs": "^1.11.19",
       "dotenv": "^17.2.3",
       "express": "^5.1.0",
+      "ollama": "^0.6.2",
       "openai": "^6.7.0",
       "zod": "^4.1.12"
    }
