--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -13,6 +13,7 @@
       "@radix-ui/react-slot": "^1.2.3",
       "@tailwindcss/typography": "^0.5.19",
       "@tailwindcss/vite": "^4.1.16",
+      "@tanstack/react-query": "^5.90.7",
       "axios": "^1.13.1",
       "class-variance-authority": "^0.7.1",
       "clsx": "^2.1.1",
@@ -21,6 +22,7 @@
       "react-dom": "^19.1.1",
       "react-hook-form": "^7.66.0",
       "react-icons": "^5.5.0",
+      "react-loading-skeleton": "^3.5.0",
       "react-markdown": "^10.1.0",
       "tailwind-merge": "^3.3.1",
       "tailwindcss": "^4.1.16"
